required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Filter encoding: simple filters using propertyislike not applied properly
  #2720, #2840

Version 5.6.0 (2009-12-04):
---------------------------

- WFS hits count is incorrect if the request contain 2 layers or more (#3244)

- Fixed a problem with layer plugin where copyVirtualTable didn't copy
the LayerResultsGetShape function pointer (#3223)


Version 5.6.0-rc1 (2009-11-27):
-------------------------------

- Fixed a problem with shape-based queries against projected layers when 
  using a tolerance (#3211)

- Fixed long expression evaluation (#2123) 

- Added simplfy and topologyPreservingSimplify to MapScript (#2753)

- Fixed Oracle FastCGI memory leak (#3187)
 
- layer->project flag not being reset properly for drawquerylayer (#673 #2079)

- OGC SLD: support multi-polygons geometries for filters embedded in 
  an SLD (#3097)

- [WMC] embedded SLD in context does not work with namespace prefix (#3115)

- Support name aliases used in sld text symbolizer (#3114)

- decode html and unicode entities for polygon truetype symbol fills (#3203)

- Parse PropertyName parameter for wfs requests (#675)

- Fixed when saving a map, layer->transform isn't written properly in 
  all cases. (#3198)

- Fixed buffer overflow in oracle spatial driver with large sql data (#2694)

- Improve FastCGI include file finding logic (#3200)


Version 5.6.0-beta5 (2009-11-04):
---------------------------------

- Apply a minimum width on label outline (new outlines were too thin by default)

- Don't apply scalefactor to polygon outline widths (but apply the 
  resolutionfactor)
